k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bixi-life-deployment
  labels:
    app: bixi-life
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bixi-life
  template:
    metadata:
      labels:
        app: bixi-life
    spec:
      containers:
      - name: bixi-life
        image: paulynomial/bixi-life:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
