k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: bixi-life-service
spec:
  selector:
    app: bixi-life
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
